--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-sm navbar-light bg-light text-uppercase font-wight-bold" id="mainNav">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light text-uppercase font-weight-bold" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fab fa-slack"></i> Portofolio</a>
                 <button class="navbar-toggler text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
