--- a/index.html
+++ b/index.html
@@ -122,7 +122,16 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row justify-content-center">
-                    <div class="col-lg-8"><p class="lead">Lulusan S1 jurusan Sistem Informasi (2018), saya menguasai web programming, mampu merakit PC, meguasai jaringan LAN, meguasai program office (excel & word) dan mampu bekerja dalam tim.</p></div>
+                    <div class="col-lg-8"><p class="lead">Nama Saya Jalalludin, usia saat ini 28 tahun, seorang lulusan S1 jurusan Sistem Informasi (2018/2019) dengan IPK 3,42 di STMIK Insan Pembangunan (Bitung- Tangerang). Saya selalu antusias dengan segala sesuatu yang berhubungan dengan komputer. Saya menguasai web programming dengan bahasa pemrograman PHP, jQuery, mySQL dengan framework CodeIgniter v3. Selain itu, saya juga mampu merakit PC, instalasi jaringan LAN, menguasai program office (excel & word) dan mampu bekerja dalam tim.</p></div>
+                </div>
+                <!-- Footer Social Icons-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <h4 class="text-uppercase mb-4">Media Sosial</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.facebook.com/sii.jalal.tea" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/jalalludin-00700303" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.instagram/jalaalu_007" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -139,80 +148,67 @@
                 </div>
                 <!-- Contact Section Form-->
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                    <div class="col-lg-4 mx-auto">                       
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                <label>Nama Lengkap</label>
+                                <input class="form-control" id="name" type="text" placeholder="Name" value="Jalalludin" data-validation-required-message="Please enter your name." disabled>
+                                <p class="help-block text-danger"></p>
                             </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label>
-                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                <label>Alamat Email</label>
+                                <input class="form-control" id="email" type="email" placeholder="Email Address" value="Jalalludin007@hotmail.com" data-validation-required-message="Please enter your email address." disabled>
+                                <p class="help-block text-danger"></p>
                             </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label>
-                                    <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                                <label>No HP</label>
+                                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" value="0812-9196-9914" data-validation-required-message="Please enter your phone number." disabled>
+                                <p class="help-block text-danger"></p>
                             </div>
-                            <!-- <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label>
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div> -->
-                            <!-- <br />
-                            <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div> -->
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="footer text-center">
+        <!-- Footer
+        <footer class="footer text-right">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <!-- <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
                             2215 John Daniel Drive
                             <br />
                             Clark, MO 65243
                         </p>
-                    </div>
+                    </div> -->
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="www.facebook.com/sii.jalal.tea"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/jalalludin-00700303"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="www.instagram/jalaalu_007"><i class="fab fa-fw fa-instagram"></i></a>
-                    </div>
+                    <!-- <div class="col-lg mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Media Sosial</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.facebook.com/sii.jalal.tea" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.linkedin.com/in/jalalludin-00700303" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://www.instagram/jalaalu_007" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
+                    </div> -->
                     <!-- Footer About Text-->
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About Freelancer</h4>
                         <p class="lead mb-0">
                             Freelance is a free to use, MIT licensed Bootstrap theme created by
                             <a href="http://startbootstrap.com">Start Bootstrap</a>
                             .
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
-        </footer>
+        </footer> -->
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © Your Website 2020</small></div>
+            <div class="container"><small>Copyright © Jalalludin 2021</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
