--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="font-weight-light mb-3">Web Programmer</p>
+                <p class="font-weight-light mb-3">IT Support</p>
             </div>
         </header>
         <!-- Skill Section-->
@@ -232,12 +232,19 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">
-                                        menguasai pemrograman web
-                                    </p>
+                                    <div class="text-left">
+                                        Menguasai Bahasa Pemrograman Web
+                                        <ul class="mb-5">
+                                            <li>PHP</li>
+                                            <li>HTML & CSS</li>
+                                            <li>Javascript/JQuery</li>
+                                            <li>Database MySQL</li>
+                                            <li>Framework CodeIgniter</li>
+                                        </ul>
+                                    </div>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
-                                        Tutup
+                                        Close Window
                                     </button>
                                 </div>
                             </div>
@@ -263,7 +270,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <div class="text-left">
+                                        <ul class="mb-5">
+                                            <li>Merakit Hardware Komputer</li>
+                                            <li>Instalasi Software</li>
+                                        </ul>
+                                    </div>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -292,7 +304,13 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <div class="text-left">
+                                        <ul class="mb-5">
+                                            <li>Instalasi Jaringan LAN</li>
+                                            <li>Setting Jaringan</li>
+                                            <li>Troubleshooting Masalah Jaringan</li>
+                                        </ul>
+                                    </div>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -311,7 +329,7 @@
                     <div class="modal-body text-center">
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-8">
+                                <div class="col-lg-9">
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Menguasai Aplikasi Office</h2>
                                     <!-- Icon Divider-->
@@ -321,7 +339,12 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <div class="text-left">
+                                        <ul class="mb-5">
+                                            <li>Mampu Mengoperasikan Ms. Excel</li>
+                                            <li>Mampu Mengoperasikan Ms. Word</li>
+                                        </ul>
+                                    </div>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -340,7 +363,7 @@
                     <div class="modal-body text-center">
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-8">
+                                <div class="col-lg-10">
                                     <!-- Portfolio Modal - Title-->
                                     <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal5Label">Mampu Bekerja Sama</h2>
                                     <!-- Icon Divider-->
@@ -350,7 +373,13 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <div class="text-left">
+                                        <ul class="mb-5">
+                                            <li>Mampu Beradaptasi dengan orang lain</li>
+                                            <li>Bisa bekerja maksimal dan memberikan yang terbaik untuk perusahaan</li>
+                                            <li>Tepat waktu dalam menyelesaikan tugas</li>
+                                        </ul>
+                                    </div>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
